--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
     <link rel="stylesheet" href="default.css" />
 
     <link id="theme-style" rel="stylesheet" href="" />
-
-
   </head>
   <body>
     <section class="s1">
@@ -33,13 +31,15 @@
 
         <div class="intro-wrapper">
           <div class="nav-wrapper">
-            <div class="dots-wrapper">
-              <div id="dot-1" class="browser-dot"></div>
-              <div id="dot-2" class="browser-dot"></div>
-              <div id="dot-3" class="browser-dot"></div>
-            </div>
+            <a href="index.html">
+              <div class="dots-wrapper">
+                <div id="dot-1" class="browser-dot"></div>
+                <div id="dot-2" class="browser-dot"></div>
+                <div id="dot-3" class="browser-dot"></div>
+              </div>
+            </a>
             <ul id="navigation">
-              <li><a href="#">Contact</a></li>
+              <li><a href="index.html#contact">Contact</a></li>
             </ul>
           </div>
           <div class="left-column">
@@ -53,10 +53,10 @@
             </h5>
             <div id="theme-options-wrapper">
               <!-- 'data-mode' is a custom atribute -->
-              <div data-mode='light' id="light-mode" class="theme-dot"></div>
-              <div data-mode='blue' id="blue-mode" class="theme-dot"></div>
-              <div data-mode='green' id="green-mode" class="theme-dot"></div>
-              <div data-mode='purple' id="purple-mode" class="theme-dot"></div>
+              <div data-mode="light" id="light-mode" class="theme-dot"></div>
+              <div data-mode="blue" id="blue-mode" class="theme-dot"></div>
+              <div data-mode="green" id="green-mode" class="theme-dot"></div>
+              <div data-mode="purple" id="purple-mode" class="theme-dot"></div>
             </div>
             <p id="settings-note">
               *Theme options will be saved for<br />your next visit
@@ -203,6 +203,7 @@
       <div class="main-container">
         <h3 style="text-align: center">Get In Touch</h3>
         <form id="contact-form">
+          <a name="contact"></a>
           <label>Name</label>
           <input class="input-field" type="text" name="name" />
 
@@ -220,6 +221,5 @@
     </section>
 
     <script type="text/javascript" src="script.js"></script>
-
   </body>
 </html>
