Add gitHub link

--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
           <div class="social-links">
             <img id="social_img" src="images/github_pic_dark_smal.PNG" alt="" />
             <h3>Find me on GitHub</h3>
-            <a target="_blank" href="#">https://github.com/mm1544</a>
+            <a target="_blank" href="https://github.com/mm1544"
+              >https://github.com/mm1544</a
+            >
           </div>
         </div>
       </div>
